--- a/First task/style/style.css
+++ b/First task/style/style.css
@@ -1,7 +1,11 @@
 *{
   margin: 0px;
   padding: 5px;
-  background-color: #f3f3f3;
+}
+
+body{
+  background-color: #C0C0C0;
+  padding: 0px;
 }
 
 a{
@@ -10,7 +14,7 @@ a{
 }
 
 .for_margin{
-  margin: 20px;
+  margin-right: 20px;
   font-size: 20px;
 }
 
@@ -32,15 +36,25 @@ img{
   height: 500px;
 }
 
-li{
-  font-size: 17px;
-  padding-bottom: 10px;
-}
-
-a.sign_up{
+.sign_up, .sign_in{
   float: right;
+  font-size: 27px;
+  margin: 5px;
 }
 
 .name_site{
   text-align: center;
+}
+
+.main_header, .sign_up, .name_site, .sign_in{
+  background-color: #F0F8FF;
+}
+
+.sign_up_form, .sign_in_form{
+  text-align: center;
+  font-size: 20px;
+}
+
+.categories{
+  background-color: #FFE4C4;
 }
